--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -3,4 +3,4 @@ id = "wso2.apim.catalog-compiler-plugin"
 class = "io.ballerina.wso2.apim.catalog.ServiceCatalogCompilerPlugin"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/http-compiler-plugin-@project.version@.jar"
+path = "../compiler-plugin/build/libs/http-compiler-plugin-1.11.1-SNAPSHOT.jar"
