Add initial logic for code modifier

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,4 @@ testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.0.1
 
 ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
-openapiVersion=1.8.3
+openapiVersion=1.9.0-SNAPSHOT
