--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.ballerina.wso2.apim.catalog
-version=1.11.1-SNAPSHOT
+version=0.1.0
 
 puppycrawlCheckstyleVersion=10.12.0
 checkstyleToolVersion=10.12.0
@@ -9,6 +9,7 @@ underCouchDownloadVersion=5.4.0
 researchgateReleaseVersion=2.8.0
 testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.0.1
+swaggerParserVersion=2.1.16
 
 ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
 openapiVersion=1.9.0-SNAPSHOT
