--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -1,6 +1,6 @@
 [plugin]
 id = "wso2.apim.catalog-compiler-plugin"
-class = "io.ballerina.wso2.apim.catalog.ServiceCatalogCompilerPlugin"
+class = "io.ballerina.wso2.apim.catalog.codemodifier.ServiceCatalogCodeModifier"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/http-compiler-plugin-1.11.1-SNAPSHOT.jar"
+path = "../compiler-plugin/build/libs/wso2.apim.catalog-compiler-plugin-0.1.0.jar"
