--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -32,10 +32,7 @@ buildscript {
     }
 }
 
-dependencies {
-//    jacocoRuntime "org.jacoco:org.jacoco.agent:${jacoco.toolVersion}:runtime"up: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
-//    ballerinaStdLibs group: 'io.ballerina', name: 'ballerina-to-openapi', version: "${openapiVersion}"
-}
+apply plugin: 'io.ballerina.plugin'
 
 description = 'Ballerina - Wso2 API Manager service catalog'
 
@@ -62,8 +59,6 @@ def stripBallerinaExtensionVersion(String extVersion) {
     }
 }
 
-apply plugin: 'io.ballerina.plugin'
-
 ballerina {
     packageOrganization = packageOrg
     module = packageName
@@ -73,6 +68,7 @@ ballerina {
 task updateTomlFiles {
     doLast {
         def newBallerinaToml = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
+        newBallerinaToml = newBallerinaToml.replace("@toml.version@", tomlVersion)
         ballerinaTomlFile.text = newBallerinaToml
 
         def newCompilerPluginToml = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
@@ -124,6 +120,7 @@ build.dependsOn "generatePomFileForMavenPublication"
 build.dependsOn ":${packageName}-native:build"
 build.dependsOn ":${packageName}-compiler-plugin:build"
 build.dependsOn deleteDependencyTomlFiles
+
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
 
