[Automated] Update the native jar versions

--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -4,8 +4,8 @@ name = "wso2.apim.catalog"
 version = "0.1.0"
 distribution = "2201.9.0-20240326-110600-aca0cc0c"
 
-#[[platform.java17.dependency]]
-#groupId = "io.ballerina"
-#artifactId = "wso2.apim.catalog-native"
-#version = "0.1.0"
-#path = "../native/build/libs/wso2.apim.catalog-native-native-0.1.0.jar"
+[[platform.java17.dependency]]
+groupId = "io.ballerina"
+artifactId = "wso2.apim.catalog-native"
+version = "0.1.0"
+path = "../native/build/libs/wso2.apim.catalog-native-0.1.0.jar"
