--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -1,6 +1,6 @@
 [plugin]
 id = "wso2.apim.catalog-compiler-plugin"
-class = "io.ballerina.wso2.apim.catalog.codemodifier.ServiceCatalogCodeModifier"
+class = "io.ballerina.wso2.apim.catalog.ServiceCatalogCompilerPlugin"
 
 [[dependency]]
 path = "../compiler-plugin/build/libs/wso2.apim.catalog-compiler-plugin-0.1.0.jar"
