--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -6,4 +6,4 @@ class = "io.ballerina.wso2.apim.catalog.ServiceCatalogCompilerPlugin"
 path = "../compiler-plugin/build/libs/wso2.apim.catalog-compiler-plugin-0.1.0.jar"
 
 [[dependency]]
-path = "./libs/ballerina-to-openapi-1.9.0-SNAPSHOT.jar"
+path = "libs/ballerina-to-openapi-1.9.0-SNAPSHOT.jar"
