--- a/build-config/resources/CompilerPlugin.toml
+++ b/build-config/resources/CompilerPlugin.toml
@@ -4,3 +4,6 @@ class = "io.ballerina.wso2.apim.catalog.ServiceCatalogCompilerPlugin"
 
 [[dependency]]
 path = "../compiler-plugin/build/libs/wso2.apim.catalog-compiler-plugin-@project.version@.jar"
+
+[[dependency]]
+path = "lib/ballerina-to-openapi-@openapi.version@.jar"
