--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.0.1
 swaggerParserVersion=2.1.16
 
-ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
+#ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
+ballerinaLangVersion=2201.9.0-SNAPSHOT
 openapiVersion=1.9.0-SNAPSHOT
