--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -21,3 +21,9 @@ groupId = "com.fasterxml.jackson.core"
 artifactId = "jackson-databind"
 version = "2.15.2"
 path = "lib/jackson-databind-2.15.2.jar"
+
+[[platform.java17.dependency]]
+groupId = "com.fasterxml.jackson.core"
+artifactId = "jackson-annotations"
+version = "2.15.2"
+path = "lib/jackson-databind-2.15.2.jar"
