--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -33,9 +33,11 @@ dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
     implementation group: 'io.ballerina', name: 'ballerina-to-openapi', version: "${openapiVersion}"
-    implementation 'commons-io:commons-io:2.15.1'
-    implementation "io.swagger.core.v3:swagger-core"
-    implementation "io.swagger.core.v3:swagger-models"
+    implementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
+    implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
+    implementation group: 'commons-io', name: 'commons-io', version: "${commonsVersion}"
+    implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: "${swaggerVersion}"
+    implementation group: 'io.swagger.core.v3', name: 'swagger-models', version: "${swaggerVersion}"
 
     implementation ("io.swagger.parser.v3:swagger-parser:${swaggerParserVersion}") {
         exclude group: "io.swagger", module: "swagger-compat-spec-parser"
