--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,10 @@ researchgateReleaseVersion=2.8.0
 testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.0.1
 swaggerParserVersion=2.1.16
+swaggerVersion=2.2.10
+snakeYamlversion=1.29
+fasterxmlJacksonCoreVersion=2.15.2
+commonsVersion=2.15.1
 
 #ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
 ballerinaLangVersion=2201.9.0-SNAPSHOT
