--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -2,7 +2,7 @@
 org = "sasindu"
 name = "wso2.apim.catalog"
 version = "0.1.0"
-distribution = "2201.9.0-SNAPSHOT"
+distribution = "2201.9.0-20240403-192700-6cd56dab"
 
 [[platform.java17.dependency]]
 groupId = "io.ballerina"
