--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-tools-api', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
-    implementation group: 'io.ballerina', name: 'ballerina-to-openapi', version: "${openapiVersion}"
+    implementation group: 'io.ballerina.openapi', name: 'ballerina-to-openapi', version: "${openapiVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
     implementation group: 'commons-io', name: 'commons-io', version: "${commonsVersion}"
