--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ fasterxmlJacksonCoreVersion=2.15.2
 commonsVersion=2.15.1
 
 #ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
-ballerinaLangVersion=2201.9.0-SNAPSHOT
-openapiVersion=1.9.0-SNAPSHOT
+ballerinaLangVersion=2201.9.0-20240403-192700-6cd56dab
+openapiVersion=1.9.0-20240404-131600-58fb575
