--- a/ballerina-tests/Dependencies.toml
+++ b/ballerina-tests/Dependencies.toml
@@ -11,6 +11,7 @@ distribution-version = "2201.9.0-SNAPSHOT"
 org = "ballerina"
 name = "constraint"
 version = "1.5.0"
+scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -50,6 +51,7 @@ modules = [
 org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
+scope = "testOnly"
 
 [[package]]
 org = "ballerina"
@@ -147,7 +149,6 @@ dependencies = [
 	{org = "ballerina", name = "time"}
 ]
 modules = [
-	{org = "ballerinax", packageName = "apim_catalog_tests", moduleName = "apim_catalog_tests"},
-	{org = "ballerinax", packageName = "apim_catalog_tests", moduleName = "apim_catalog_tests.services"}
+	{org = "ballerinax", packageName = "apim_catalog_tests", moduleName = "apim_catalog_tests"}
 ]
 
