--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
-org = "sasindu"
+org = "ballerinax"
 name = "wso2.apim.catalog"
 version = "0.1.0"
-distribution = "2201.9.0-20240403-192700-6cd56dab"
+distribution = "2201.9.0-SNAPSHOT"
 
 [[platform.java17.dependency]]
 groupId = "io.ballerina"
