--- a/test-resources/helper_services/Dependencies.toml
+++ b/test-resources/helper_services/Dependencies.toml
@@ -8,18 +8,6 @@ dependencies-toml-version = "2"
 distribution-version = "2201.9.0-SNAPSHOT"
 
 [[package]]
-org = "admin"
-name = "sample_project_1"
-version = "0.1.0"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "sasindu", name = "wso2.apim.catalog"}
-]
-modules = [
-	{org = "admin", packageName = "sample_project_1", moduleName = "sample_project_1"}
-]
-
-[[package]]
 org = "ballerina"
 name = "auth"
 version = "2.10.0"
@@ -49,11 +37,14 @@ version = "1.5.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
+modules = [
+	{org = "ballerina", packageName = "constraint", moduleName = "constraint"}
+]
 
 [[package]]
 org = "ballerina"
 name = "crypto"
-version = "2.6.2"
+version = "2.5.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
@@ -68,6 +59,9 @@ dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "os"},
 	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "file", moduleName = "file"}
 ]
 
 [[package]]
@@ -109,6 +103,9 @@ version = "1.6.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
+]
+modules = [
+	{org = "ballerina", packageName = "io", moduleName = "io"}
 ]
 
 [[package]]
@@ -271,6 +268,9 @@ version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
+modules = [
+	{org = "ballerina", packageName = "time", moduleName = "time"}
+]
 
 [[package]]
 org = "ballerina"
@@ -281,17 +281,17 @@ dependencies = [
 ]
 
 [[package]]
-org = "sasindu"
-name = "wso2.apim.catalog"
+org = "test"
+name = "helper_services"
 version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "constraint"},
+	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "mime"},
-	{org = "ballerina", name = "url"}
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "time"}
 ]
 modules = [
-	{org = "sasindu", packageName = "wso2.apim.catalog", moduleName = "wso2.apim.catalog"}
+	{org = "test", packageName = "helper_services", moduleName = "helper_services"}
 ]
 
