Update ballerina-test proj with test services

--- a/ballerina-tests/build.gradle
+++ b/ballerina-tests/build.gradle
@@ -90,10 +90,57 @@ task initializeVariables {
     }
 }
 
+def ballerinaPackagePath = "ballerina"
+def helperResourcePath = "test-resources/helper_services"
+
+task publishTestResourcePackageToLocal {
+    dependsOn("::${packageName}-ballerina:build")
+    doLast {
+        exec {
+            workingDir "${project.rootDir}/${ballerinaPackagePath}"
+            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+                commandLine 'cmd', '/c', "${distributionBinPath}/bal.bat pack && exit  %%ERRORLEVEL%%"
+            } else {
+                commandLine 'sh', '-c', "${distributionBinPath}/bal pack"
+            }
+        }
+
+        exec {
+            workingDir "${project.rootDir}/${helperResourcePath}"
+            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+                commandLine 'cmd', '/c', "${distributionBinPath}/bal.bat pack && exit  %%ERRORLEVEL%%"
+            } else {
+                commandLine 'sh', '-c', "${distributionBinPath}/bal pack"
+            }
+        }
+
+        exec {
+            workingDir "${project.rootDir}/${ballerinaPackagePath}"
+            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+                commandLine 'cmd', '/c', "${distributionBinPath}/bal.bat push --repository=local" +
+                        " && exit %%ERRORLEVEL%%"
+            } else {
+                commandLine 'sh', '-c', "${distributionBinPath}/bal push --repository=local"
+            }
+        }
+
+        exec {
+            workingDir "${project.rootDir}/${helperResourcePath}"
+            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+                commandLine 'cmd', '/c', "${distributionBinPath}/bal.bat push --repository=local" +
+                        " && exit %%ERRORLEVEL%%"
+            } else {
+                commandLine 'sh', '-c', "${distributionBinPath}/bal push --repository=local"
+            }
+        }
+    }
+}
+
 task ballerinaTest {
     dependsOn(":${packageName}-ballerina:build")
     dependsOn(updateTomlVerions)
     dependsOn(initializeVariables)
+    dependsOn(publishTestResourcePackageToLocal)
     finalizedBy(commitTomlFiles)
 
     doLast {
@@ -113,5 +160,4 @@ test {
     dependsOn(ballerinaTest)
 }
 
-build.dependsOn(":${packageName}-ballerina:publishToMavenLocal")
-test.dependsOn(":${packageName}-ballerina:publishToMavenLocal")
+build.dependsOn(":${packageName}-ballerina:build")
