--- a/ballerina-tests/tests/configs/run-configs/sample_project_7/Config.toml
+++ b/ballerina-tests/tests/configs/run-configs/sample_project_7/Config.toml
@@ -1,7 +1,7 @@
 [ballerinax.wso2.apim.catalog]
 serviceUrl="http://localhost:8087"
 tokenUrl="https://localhost:9444/oauth2/token"
-user="abcd"
+username="abcd"
 password="abcd"
 clientId="aa"
 clientSecret="aa"
